# IndividualProject2-rust-_ShiyueZhou

./: .coverage  Cargo.toml  Makefile  Murder2015.db  PythonSQL_user_guide.md  README.md  RustSQL_user_guide.md  generate_report.sh  main.py  performance_report_20241025_204233.md  requirements.txt  setup.py  test_main.py  user_guide.md
.github/workflows/: pycicd.yml  rust.yml
mylib/: extract.py  transform_load.py
src/: lib.rs  main.rs
