[package]
name = "individual_project2_rust_shiyue_zhou"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core functionality
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

# CLI Argument Parsing
clap = { version = "4.0", features = ["derive"] }

# Environment variable management
dotenvy = "0.15"

# HTTP requests and JSON serialization
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# System monitoring and utility libraries
sysinfo = "0.24"
rand = "0.8"
rusqlite = "0.29.0"
csv = "1.1"
